# boutiques-schema-pydantic

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  boutiques-0.5.json  boutiques-styx-descriptor-1.json  boutiques_schema_pydantic.html  index.html  pyproject.toml  search.js
.github/workflows/: publish-schemas.yaml  test.yaml
src/boutiques_schema_pydantic/: __init__.py  cli.py  generate_all_cli.py
src/boutiques_schema_pydantic/frontend/schema/: __init__.py
src/boutiques_schema_pydantic/frontend/schema/properties/: containers.py  environment.py
src/boutiques_schema_pydantic/properties/: groups.py  tests.py
src/boutiques_schema_pydantic/v_0_5/: schema.py
src/boutiques_schema_pydantic/v_0_5/properties/: __init__.py  containers.py  environment.py  errors.py  groups.py  inputs.py  io.py  outputs.py  resources.py  tests.py
src/boutiques_schema_pydantic/v_styx_0_1/: __init__.py
src/boutiques_schema_pydantic/v_styx_1/: __init__.py  descriptor.py  utils.py
tests/: test_dummy.py
